Feat/cors configuration (#11)
* feat: added required dependencies for user authentication

* feat: added user implementation

* feat: added user implementation

* fix: fixed getting random word

* feat: added user and word statistics

* feat: added docker support

* feat: added docker support

* feat: added cors configuration

* fix: fixed corse configuration

* fix: fixed corse configuration